# CppAsScript

./: .gitignore  CLangScripter.h  CMakeLists.txt  CppAsScript.cpp  CppAsScript.h  README.md  cppAsScript.h
api_test/: export.cpp  export.h
maker/: CLangScripter.cpp  CLangScripter.h  _win.cpp  md5.h
test/: test.cpp
